Fix tools box alignment

--- a/www/css/src/page-gallery.sass
+++ b/www/css/src/page-gallery.sass
@@ -5,6 +5,7 @@ main#gallery
 
     div.image
       display: inline-block
+      position: relative
       overflow: hidden
       text-align: center
 
@@ -19,7 +20,8 @@ main#gallery
 
       span.tools
         position: absolute
-        margin-left: calc(300px - 90px - 2px)
+        top: 0
+        right: 0
         display: inline-block
         width: 90px
         height: 30px
